--- a/index.html
+++ b/index.html
@@ -4,93 +4,75 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="DevOps and SRE Portfolio of Ruchitha - showcasing cloud infrastructure, CI/CD, monitoring, and automation projects">
-  <meta name="keywords" content="DevOps, SRE, Cloud Engineer, AWS, CI/CD, Monitoring, Linux, Python, Terraform, Ansible">
-  <meta name="author" content="Ruchitha">
   <title>Ruchitha | DevOps & SRE Portfolio</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
     * {
+      box-sizing: border-box;
       margin: 0;
       padding: 0;
-      box-sizing: border-box;
     }
 
     body {
       font-family: 'Inter', sans-serif;
-      background-color: #0f172a;
-      color: #f8fafc;
-      line-height: 1.6;
+      background-color: #111827;
+      color: #f1f5f9;
+      display: flex;
+      min-height: 100vh;
     }
 
-    header {
+    aside {
+      background-color: #1f2937;
+      width: 30%;
       padding: 2rem;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
       text-align: center;
     }
 
-    header h1 {
-      font-size: 2.5rem;
+    aside h1 {
+      font-size: 2rem;
       color: #38bdf8;
+      margin-bottom: 1rem;
     }
 
-    nav {
-      margin-top: 1rem;
+    aside p {
+      margin-bottom: 1rem;
+      color: #cbd5e1;
     }
 
-    nav a {
-      color: #94a3b8;
-      margin: 0 1rem;
+    aside a {
+      color: #38bdf8;
       text-decoration: none;
-      transition: color 0.3s;
     }
 
-    nav a:hover {
-      color: #38bdf8;
-    }
-
-    section {
-      max-width: 900px;
-      margin: auto;
+    main {
+      width: 70%;
       padding: 2rem;
     }
 
     h2 {
       color: #38bdf8;
       margin-bottom: 1rem;
+      border-bottom: 1px solid #334155;
+      padding-bottom: 0.5rem;
+    }
+
+    section {
+      margin-bottom: 2rem;
+    }
+
+    ul {
+      list-style: disc;
+      margin-left: 1.5rem;
     }
 
     .project {
       background: #1e293b;
       padding: 1rem;
       border-radius: 8px;
-      margin-bottom: 1.5rem;
-      transition: transform 0.3s;
-    }
-
-    .project:hover {
-      transform: translateY(-5px);
-    }
-
-    .contact-button {
-      background-color: #38bdf8;
-      color: #0f172a;
-      padding: 0.75rem 1.5rem;
-      border: none;
-      border-radius: 6px;
-      text-decoration: none;
-      display: inline-block;
-      margin: 1rem 0;
-      transition: background-color 0.3s;
-    }
-
-    .contact-button:hover {
-      background-color: #0ea5e9;
-    }
-
-    footer {
-      text-align: center;
-      padding: 2rem;
-      color: #64748b;
+      margin-bottom: 1rem;
     }
 
     img.project-img {
@@ -102,65 +84,89 @@
 </head>
 
 <body>
-  <header>
+  <aside>
     <h1>Ruchitha</h1>
-    <p>DevOps & Site Reliability Engineer | Passionate about Cloud Automation & System Reliability</p>
-    <nav>
-      <a href="#about">About</a>
-      <a href="#skills">Skills</a>
-      <a href="#projects">Projects</a>
-      <a href="#contact">Contact</a>
-    </nav>
-  </header>
+    <p>DevOps & SRE Enthusiast</p>
+    <p><strong>Email:</strong><br> <a href="mailto:ruchithakatakm99@gmail.com">ruchithakatakm99@gmail.com</a></p>
+    <p><strong>Phone:</strong><br> +91 6303476240 / +91 8340894285</p>
+    <p><strong>LinkedIn:</strong><br><a href="https://linkedin.com/in/ruchitha-r-423409274">linkedin.com/in/ruchitha-r</a></p>
+    <p><strong>Location:</strong><br> Hyderabad, Telangana</p>
+  </aside>
 
-  <section id="about">
-    <h2>About Me</h2>
-    <p>I am a curious and committed DevOps/Site Reliability Engineer with a strong foundation in cloud infrastructure, system monitoring, and deployment automation. My experience includes working with AWS, Linux, CI/CD tools, and infrastructure as code (IaC). I enjoy solving system challenges through scripting and automation and have built real-time monitoring and deployment solutions from scratch.</p>
-    <p>My professional interest lies in building scalable, observable systems that recover gracefully from failure. I follow SRE principles like reducing toil, enhancing system uptime, and embracing a blameless culture for incident response. My goal is to continuously learn, automate, and contribute to reliable software delivery processes in modern cloud environments.</p>
-  </section>
+  <main>
+    <section>
+      <h2>Career Objective</h2>
+      <p>Aspiring DevOps/Site Reliability Engineer with hands-on experience in cloud infrastructure, server monitoring, and CI/CD pipeline deployment. Proficient in AWS, Linux, Shell Scripting, and Python with strong skills in automation, observability, and reliable deployment practices. Passionate about reducing toil and building scalable systems using SRE principles.</p>
+    </section>
 
-  <section id="skills">
-    <h2>Skills</h2>
-    <ul>
-      <li><strong>Cloud Platforms:</strong> AWS (EC2, S3, CloudFormation, IAM, VPC, SNS, CloudWatch)</li>
-      <li><strong>DevOps & SRE Tools:</strong> Jenkins, GitHub Actions, Docker, Kubernetes, ELB, Auto Scaling</li>
-      <li><strong>Monitoring & Logging:</strong> Prometheus, Grafana, Nagios, Amazon CloudWatch</li>
-      <li><strong>Automation & Scripting:</strong> Terraform, Ansible, Shell Script, Python</li>
-      <li><strong>Version Control:</strong> Git, GitHub, GitLab, Bitbucket</li>
-      <li><strong>Other:</strong> Maven, Linux Admin, Agile Practices</li>
-    </ul>
-  </section>
+    <section>
+      <h2>Work Experience</h2>
+      <p><strong>Company:</strong> OnPassive Private Limited</p>
+      <p><strong>Role:</strong> Associate Cloud Engineer</p>
+      <p><strong>Duration:</strong> July 2023 – Present</p>
+      <ul>
+        <li>Designed CI/CD pipelines using Jenkins and GitHub Actions for automated workflows.</li>
+        <li>Monitored servers using CloudWatch, Nagios, and Prometheus; set up alerts and logs.</li>
+        <li>Managed AWS resources including EC2, S3, IAM, VPC, and CloudFormation.</li>
+        <li>Automated provisioning and config tasks using Shell Scripting and Python.</li>
+        <li>Implemented IaC using Terraform and Ansible for scalable deployments.</li>
+        <li>Collaborated on DevOps integration into Agile SDLC and supported on-call rotations.</li>
+        <li>Performed root cause analysis and improved incident resolution strategies.</li>
+      </ul>
+    </section>
 
-  <section id="projects">
-    <h2>Projects</h2>
-    <div class="project">
-      <h3>LAMP Auto Deployment</h3>
-      <p>This project automates the deployment of a full LAMP stack using Ansible playbooks. It includes server configuration, database setup, secure SSL configuration, and GitHub-based CI/CD for automatic updates. This project reflects my interest in full lifecycle deployment automation and infrastructure orchestration.</p>
-      <img src="https://raw.githubusercontent.com/Ruchitha829/Ruchitha829.github.io/main/images/lamp.png" alt="LAMP Auto Deploy" class="project-img">
-    </div>
-    <div class="project">
-      <h3>Linux System Resource Monitor</h3>
-      <p>Developed a Bash and Prometheus-based system resource monitor that tracks CPU, memory, and disk usage. Integrated with Grafana for visual dashboards and alerting. This tool helps in proactive monitoring and improving system observability.</p>
-      <img src="https://raw.githubusercontent.com/Ruchitha829/Ruchitha829.github.io/main/images/system-monitor.png" alt="System Monitor" class="project-img">
-    </div>
-    <div class="project">
-      <h3>User Process Tracker</h3>
-      <p>A Linux tool that logs active user sessions and their running processes. Ideal for multi-user systems where auditability and transparency of usage is key. Implemented logging and filtering features for root-cause analysis and reporting.</p>
-      <img src="https://raw.githubusercontent.com/Ruchitha829/Ruchitha829.github.io/main/images/user-tracker.png" alt="User Process Tracker" class="project-img">
-    </div>
-  </section>
+    <section>
+      <h2>Technical Skills</h2>
+      <ul>
+        <li><strong>Cloud:</strong> AWS (EC2, S3, ELB, SNS, CloudFormation, CloudFront, Elastic Beanstalk)</li>
+        <li><strong>DevOps Tools:</strong> Jenkins, Docker, Kubernetes</li>
+        <li><strong>Monitoring:</strong> Nagios, Prometheus, CloudWatch</li>
+        <li><strong>Automation:</strong> Terraform, Ansible, Shell Scripting, Python</li>
+        <li><strong>Version Control:</strong> Git, GitHub, GitLab, Bitbucket</li>
+        <li><strong>Build Tools:</strong> Maven</li>
+        <li><strong>Languages:</strong> Python, C, Java, JavaScript</li>
+        <li><strong>OS:</strong> Linux, Windows</li>
+      </ul>
+    </section>
 
-  <section id="contact">
-    <h2>Contact</h2>
-    <p>📧 Email: <a href="mailto:ruchithakatakm99@gmail.com">ruchithakatakm99@gmail.com</a></p>
-    <p>📞 Phone: +91 6303476240 / +91 8340894285</p>
-    <p>🔗 LinkedIn: <a href="https://linkedin.com/in/ruchitha-r-423409274" target="_blank">ruchitha-r-423409274</a></p>
-    <a href="mailto:ruchithakatakm99@gmail.com" class="contact-button">Let's Connect</a>
-  </section>
+    <section>
+      <h2>Projects</h2>
+      <div class="project">
+        <h3>LAMP Auto Deployment</h3>
+        <p>Automated LAMP stack deployment using Ansible, integrated CI/CD via GitHub, added SSL support. Demonstrates skills in automation, orchestration, and cloud hosting.</p>
+        <img src="images/lamp.png" alt="LAMP Project" class="project-img">
+      </div>
+      <div class="project">
+        <h3>Linux System Resource Monitor</h3>
+        <p>Bash and Prometheus-based monitor with Grafana dashboards for system health visibility. Includes alerts for resource thresholds.</p>
+        <img src="images/system-monitor.png" alt="System Monitor" class="project-img">
+      </div>
+      <div class="project">
+        <h3>User Process Tracker</h3>
+        <p>Linux script to log users and processes, useful for system audits and resource tracking. Supports report generation and filtering.</p>
+        <img src="images/user-tracker.png" alt="User Tracker" class="project-img">
+      </div>
+    </section>
 
-  <footer>
-    <p>&copy; 2025 Ruchitha. Made with passion for clean infrastructure and resilient systems.</p>
-  </footer>
+    <section>
+      <h2>Education</h2>
+      <ul>
+        <li><strong>B.Tech - EEE</strong>, Swami Ramananda Teertha Institute of Science and Technology, 2021, CGPA: 8.4</li>
+        <li><strong>Intermediate</strong>, Gowthami Junior College, 2017, 97.2%</li>
+        <li><strong>SSC</strong>, Krishnaveni Talent School, 2015, 9.8 CGPA</li>
+      </ul>
+    </section>
+
+    <section>
+      <h2>Strengths</h2>
+      <ul>
+        <li>Strong communication and teamwork abilities</li>
+        <li>Fast learner and adaptable to new environments</li>
+        <li>Proactive in learning new technologies and solving problems</li>
+      </ul>
+    </section>
+  </main>
+
 </body>
 
 </html>
